--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "8fd1d6f4",
    "metadata": {},
    "outputs": [
@@ -10,111 +10,108 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "API Key activated\n",
-      "{'kind': 'youtube#channelListResponse', 'etag': 'jnXPevtMWjWJr2AiL_Vlc1opiZ0', 'pageInfo': {'totalResults': 1, 'resultsPerPage': 5}, 'items': [{'kind': 'youtube#channel', 'etag': 'sngn-Wlf3mxG5qC-ZtnHoZB0N1c', 'id': 'UC_x5XG1OV2P6uZZ5FSM9Ttw', 'snippet': {'title': 'Google for Developers', 'description': 'Subscribe to join a community of creative developers and learn the latest in Google technology — from AI and cloud, to mobile and web.\\n\\nExplore more at developers.google.com\\n\\n', 'customUrl': '@googledevelopers', 'publishedAt': '2007-08-23T00:34:43Z', 'thumbnails': {'default': {'url': 'https://yt3.ggpht.com/2eI1TjX447QZFDe6R32K0V2mjbVMKT5mIfQR-wK5bAsxttS_7qzUDS1ojoSKeSP0NuWd6sl7qQ=s88-c-k-c0x00ffffff-no-rj', 'width': 88, 'height': 88}, 'medium': {'url': 'https://yt3.ggpht.com/2eI1TjX447QZFDe6R32K0V2mjbVMKT5mIfQR-wK5bAsxttS_7qzUDS1ojoSKeSP0NuWd6sl7qQ=s240-c-k-c0x00ffffff-no-rj', 'width': 240, 'height': 240}, 'high': {'url': 'https://yt3.ggpht.com/2eI1TjX447QZFDe6R32K0V2mjbVMKT5mIfQR-wK5bAsxttS_7qzUDS1ojoSKeSP0NuWd6sl7qQ=s800-c-k-c0x00ffffff-no-rj', 'width': 800, 'height': 800}}, 'localized': {'title': 'Google for Developers', 'description': 'Subscribe to join a community of creative developers and learn the latest in Google technology — from AI and cloud, to mobile and web.\\n\\nExplore more at developers.google.com\\n\\n'}, 'country': 'US'}, 'statistics': {'viewCount': '404176801', 'subscriberCount': '2540000', 'hiddenSubscriberCount': False, 'videoCount': '6762'}}]}\n"
+      "      video_id                                              title  \\\n",
+      "0  ISSjUbAVJa0                         Okay fine, I'll try Skyrim   \n",
+      "1  ST5mY0HE_7o  SKYRIM Full Movie 2025: Oblivion | FullHDvideo...   \n",
+      "2  V2OoTDk9JiI  These NPCs don’t know they’re talking to the D...   \n",
+      "3  2AbEyr8nIcA  \"THAT\" Jumpscared Me 💀 #skyrim #skyrimannivers...   \n",
+      "4  B-oe9ypNSb0  New Skyrim Mods You Should Try Before Starting...   \n",
+      "\n",
+      "                                         description  \\\n",
+      "0  Skyrim.. the game everyone says is their favor...   \n",
+      "1  Skyrim Full Movie 2025: Oblivion | FullHDvideo...   \n",
+      "2                                                NaN   \n",
+      "3  #Skyrim #Anniversary #skyrimae \\n\\nThe Elder S...   \n",
+      "4  🔗 https://ene.ba/MasterCheesey\\n🎮 https://ene....   \n",
+      "\n",
+      "                 channel_id    channel_title  category_id    views   likes  \\\n",
+      "0  UCO9US9tHbfyTD3eGJEbD1Ig             Bind           22  2238569   75971   \n",
+      "1  UCpiLRBQAIDhzuxnDi9Oar4A  FullHDvideos4me            1  2246428   12513   \n",
+      "2  UCaHAsSOlU3yuYxohUrMVtBA     Skooma Sippa           20  4716091  161780   \n",
+      "3  UCnVbLunqMpiik_WEA3dSVaw        Salmagros           20  4069162  106650   \n",
+      "4  UCjpUc0ZOzwHYkFIs3U4Z9fg   Master Cheesey           20     3562     288   \n",
+      "\n",
+      "   comments  duration          published_at keyword  \n",
+      "0      7808  PT38M23S  2025-04-14T20:00:58Z  skyrim  \n",
+      "1       236   PT2H28S  2025-05-03T09:00:38Z  skyrim  \n",
+      "2      3087     PT36S  2025-08-28T17:14:52Z  skyrim  \n",
+      "3      3046      PT7S  2024-09-09T06:02:45Z  skyrim  \n",
+      "4        33  PT11M33S  2025-09-11T16:00:18Z  skyrim  \n"
      ]
     }
    ],
    "source": [
-    "# for data collection and extraction\n",
-    "from googleapiclient.discovery import build\n",
+    "# test jupy nb for data analysis and preprocessing\n",
     "import pandas as pd\n",
-    "import time\n",
-    "import os\n",
-    "from dotenv import load_dotenv\n",
+    "from collections import Counter\n",
+    "import re\n",
+    "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
     "\n",
-    "load_dotenv()\n",
-    "api_key = os.getenv(\"YOUTUBE_API_KEY\")\n",
-    "\n",
-    "def get_youtube_client():\n",
-    "    return build(\"youtube\", \"v3\", developerKey=api_key)\n",
-    "\n",
-    "youtube = get_youtube_client()\n",
-    "\n",
-    "# for testing activation\n",
-    "request = youtube.channels().list(\n",
-    "    part=\"snippet, statistics\",\n",
-    "    forUsername=\"GoogleDevelopers\"\n",
-    ")\n",
-    "response = request.execute()\n",
-    "\n",
-    "print(\"API Key activated\")\n",
-    "print(response)"
+    "df = pd.read_csv(\"ytraw.csv\")\n",
+    "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "5a9f0d97",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 300 entries, 0 to 299\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   video_id       300 non-null    object\n",
+      " 1   title          300 non-null    object\n",
+      " 2   description    265 non-null    object\n",
+      " 3   channel_id     300 non-null    object\n",
+      " 4   channel_title  300 non-null    object\n",
+      " 5   category_id    300 non-null    int64 \n",
+      " 6   views          300 non-null    int64 \n",
+      " 7   likes          300 non-null    int64 \n",
+      " 8   comments       300 non-null    int64 \n",
+      " 9   duration       300 non-null    object\n",
+      " 10  published_at   300 non-null    object\n",
+      " 11  keyword        300 non-null    object\n",
+      "dtypes: int64(4), object(8)\n",
+      "memory usage: 28.3+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "# full stats for a yt vid\n",
-    "def get_vid_stats(video_id):\n",
-    "    stats_req = youtube.videos().list(\n",
-    "        part=\"statistics,contentDetails,snippet\", id=video_id\n",
-    "    )\n",
-    "    stats_item = stats_req.execute()[\"items\"][0]\n",
-    "\n",
-    "    statistics = stats_item[\"statistics\"]\n",
-    "    snippet = stats_item[\"snippet\"]\n",
-    "    content_details = stats_item[\"contentDetails\"]\n",
-    "\n",
-    "    return {\n",
-    "        \"video_id\": video_id,\n",
-    "        \"title\": snippet.get(\"title\"),\n",
-    "        \"description\": snippet.get(\"description\"),\n",
-    "        \"channel_id\": snippet.get(\"channelId\"),\n",
-    "        \"channel_title\": snippet.get(\"channelTitle\"),\n",
-    "        \"category_id\": snippet.get(\"categoryId\"),\n",
-    "        \"views\": int(statistics.get(\"viewCount\", 0)),\n",
-    "        \"likes\": int(statistics.get(\"likeCount\", 0)),\n",
-    "        \"comments\": int(statistics.get(\"commentCount\", 0)),\n",
-    "        \"duration\": content_details.get(\"duration\"),\n",
-    "        \"published_at\": snippet.get(\"publishedAt\")\n",
-    "    }"
+    "print(df.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "592c8286",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       category_id         views         likes      comments\n",
+      "count   300.000000  3.000000e+02  3.000000e+02    300.000000\n",
+      "mean     19.676667  3.457251e+06  9.100903e+04   1117.073333\n",
+      "std       3.711879  8.753740e+06  1.975987e+05   2412.616779\n",
+      "min       1.000000  8.900000e+01  0.000000e+00      0.000000\n",
+      "25%      20.000000  1.770268e+05  5.986250e+03    128.500000\n",
+      "50%      20.000000  8.810815e+05  2.567850e+04    416.500000\n",
+      "75%      20.000000  2.635452e+06  8.419175e+04   1079.250000\n",
+      "max      27.000000  8.307708e+07  2.039668e+06  28234.000000\n"
+     ]
+    }
+   ],
    "source": [
-    "# search vidoes by keyword with date filter 2020\n",
-    "def search_videos(query, max_results=100, start_year=2020):\n",
-    "    video_data = []\n",
-    "    next_page_token = None\n",
-    "    collected = 0\n",
-    "    published_after = f\"{start_year}-01-01T00:00:00Z\"\n",
-    "\n",
-    "    while collected < max_results:\n",
-    "        request = youtube.search().list(\n",
-    "            part=\"snippet\",\n",
-    "            q=query,\n",
-    "            type=\"video\",\n",
-    "            maxResults=min(50, max_results - collected),\n",
-    "            pageToken=next_page_token,\n",
-    "            publishedAfter=published_after\n",
-    "        )\n",
-    "        response = request.execute()\n",
-    "\n",
-    "        for item in response[\"items\"]:\n",
-    "            video_id = item[\"id\"][\"videoId\"]\n",
-    "            data = get_vid_stats(video_id)\n",
-    "            video_data.append(data)\n",
-    "            collected += 1\n",
-    "            if collected >= max_results:\n",
-    "                break\n",
-    "\n",
-    "        next_page_token = response.get(\"nextPageToken\")\n",
-    "        if not next_page_token:\n",
-    "            break\n",
-    "\n",
-    "        time.sleep(1) # quota issues to avoid\n",
-    "\n",
-    "    return pd.DataFrame(video_data)"
+    "print(df.describe())"
    ]
   },
   {
