preparation for small creators data collection and preprocessing for big creators

--- a/test.ipynb
+++ b/test.ipynb
@@ -41,7 +41,7 @@
     }
    ],
    "source": [
-    "# test jupy nb for data analysis and preprocessing\n",
+    "# test jupy nb for data analysis and preprocessing big creators\n",
     "import pandas as pd\n",
     "from collections import Counter\n",
     "import re\n",
@@ -116,30 +116,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c6608eca",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# multiple keywords used simultaneously\n",
-    "def collect_keywords(keywords, max_results_per_keyword=100, start_year=2020):\n",
-    "    all_data = pd.DataFrame()\n",
-    "\n",
-    "    for keyword in keywords:\n",
-    "        print(f\"Collecting videos for keyword: {keyword}\")\n",
-    "        df = search_videos(keyword, max_results=max_results_per_keyword, start_year=start_year)\n",
-    "        df[\"keyword\"] = keyword\n",
-    "        all_data = pd.concat([all_data, df], ignore_index=True)\n",
-    "\n",
-    "    return all_data\n",
-    "\n",
-    "def csv_save(df, filename=\"ytraw.csv\"):\n",
-    "    df.to_csv(filename, index=False)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "b1f12fc0",
    "metadata": {},
    "outputs": [
@@ -302,17 +287,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# collecting raw data (testing/collection)\n",
-    "\n",
-    "keywords = [\"skyrim\",\"rimworld\",\"minecraft\"] # input your keywords\n",
-    "\n",
-    "df = collect_keywords(keywords, max_results_per_keyword=100, start_year=2020)\n",
-    "\n",
-    "csv_save(df, \"ytraw.csv\")\n",
-    "\n",
-    "df.head() # can be changed to preview data in different ways"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
