--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "8fd1d6f4",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,13 @@
     "import re\n",
     "from sklearn.feature_extraction.text import ENGLISH_STOP_WORDS\n",
     "\n",
-    "df = pd.read_csv(\"ytraw.csv\")\n",
+    "df = pd.read_csv(\"bigraw.csv\")\n",
     "print(df.head())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "5a9f0d97",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "592c8286",
    "metadata": {},
    "outputs": [
@@ -113,181 +113,6 @@
    "source": [
     "print(df.describe())"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6608eca",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1f12fc0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting videos for keyword: skyrim\n",
-      "Collecting videos for keyword: rimworld\n",
-      "Collecting videos for keyword: minecraft\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>video_id</th>\n",
-       "      <th>title</th>\n",
-       "      <th>description</th>\n",
-       "      <th>channel_id</th>\n",
-       "      <th>channel_title</th>\n",
-       "      <th>category_id</th>\n",
-       "      <th>views</th>\n",
-       "      <th>likes</th>\n",
-       "      <th>comments</th>\n",
-       "      <th>duration</th>\n",
-       "      <th>published_at</th>\n",
-       "      <th>keyword</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ISSjUbAVJa0</td>\n",
-       "      <td>Okay fine, I'll try Skyrim</td>\n",
-       "      <td>Skyrim.. the game everyone says is their favor...</td>\n",
-       "      <td>UCO9US9tHbfyTD3eGJEbD1Ig</td>\n",
-       "      <td>Bind</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2238569</td>\n",
-       "      <td>75971</td>\n",
-       "      <td>7808</td>\n",
-       "      <td>PT38M23S</td>\n",
-       "      <td>2025-04-14T20:00:58Z</td>\n",
-       "      <td>skyrim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ST5mY0HE_7o</td>\n",
-       "      <td>SKYRIM Full Movie 2025: Oblivion | FullHDvideo...</td>\n",
-       "      <td>Skyrim Full Movie 2025: Oblivion | FullHDvideo...</td>\n",
-       "      <td>UCpiLRBQAIDhzuxnDi9Oar4A</td>\n",
-       "      <td>FullHDvideos4me</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2246428</td>\n",
-       "      <td>12513</td>\n",
-       "      <td>236</td>\n",
-       "      <td>PT2H28S</td>\n",
-       "      <td>2025-05-03T09:00:38Z</td>\n",
-       "      <td>skyrim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>V2OoTDk9JiI</td>\n",
-       "      <td>These NPCs don’t know they’re talking to the D...</td>\n",
-       "      <td></td>\n",
-       "      <td>UCaHAsSOlU3yuYxohUrMVtBA</td>\n",
-       "      <td>Skooma Sippa</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4716091</td>\n",
-       "      <td>161780</td>\n",
-       "      <td>3087</td>\n",
-       "      <td>PT36S</td>\n",
-       "      <td>2025-08-28T17:14:52Z</td>\n",
-       "      <td>skyrim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2AbEyr8nIcA</td>\n",
-       "      <td>\"THAT\" Jumpscared Me 💀 #skyrim #skyrimannivers...</td>\n",
-       "      <td>#Skyrim #Anniversary #skyrimae \\n\\nThe Elder S...</td>\n",
-       "      <td>UCnVbLunqMpiik_WEA3dSVaw</td>\n",
-       "      <td>Salmagros</td>\n",
-       "      <td>20</td>\n",
-       "      <td>4069162</td>\n",
-       "      <td>106650</td>\n",
-       "      <td>3046</td>\n",
-       "      <td>PT7S</td>\n",
-       "      <td>2024-09-09T06:02:45Z</td>\n",
-       "      <td>skyrim</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>B-oe9ypNSb0</td>\n",
-       "      <td>New Skyrim Mods You Should Try Before Starting...</td>\n",
-       "      <td>🔗 https://ene.ba/MasterCheesey\\n🎮 https://ene....</td>\n",
-       "      <td>UCjpUc0ZOzwHYkFIs3U4Z9fg</td>\n",
-       "      <td>Master Cheesey</td>\n",
-       "      <td>20</td>\n",
-       "      <td>3562</td>\n",
-       "      <td>288</td>\n",
-       "      <td>33</td>\n",
-       "      <td>PT11M33S</td>\n",
-       "      <td>2025-09-11T16:00:18Z</td>\n",
-       "      <td>skyrim</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      video_id                                              title  \\\n",
-       "0  ISSjUbAVJa0                         Okay fine, I'll try Skyrim   \n",
-       "1  ST5mY0HE_7o  SKYRIM Full Movie 2025: Oblivion | FullHDvideo...   \n",
-       "2  V2OoTDk9JiI  These NPCs don’t know they’re talking to the D...   \n",
-       "3  2AbEyr8nIcA  \"THAT\" Jumpscared Me 💀 #skyrim #skyrimannivers...   \n",
-       "4  B-oe9ypNSb0  New Skyrim Mods You Should Try Before Starting...   \n",
-       "\n",
-       "                                         description  \\\n",
-       "0  Skyrim.. the game everyone says is their favor...   \n",
-       "1  Skyrim Full Movie 2025: Oblivion | FullHDvideo...   \n",
-       "2                                                      \n",
-       "3  #Skyrim #Anniversary #skyrimae \\n\\nThe Elder S...   \n",
-       "4  🔗 https://ene.ba/MasterCheesey\\n🎮 https://ene....   \n",
-       "\n",
-       "                 channel_id    channel_title category_id    views   likes  \\\n",
-       "0  UCO9US9tHbfyTD3eGJEbD1Ig             Bind          22  2238569   75971   \n",
-       "1  UCpiLRBQAIDhzuxnDi9Oar4A  FullHDvideos4me           1  2246428   12513   \n",
-       "2  UCaHAsSOlU3yuYxohUrMVtBA     Skooma Sippa          20  4716091  161780   \n",
-       "3  UCnVbLunqMpiik_WEA3dSVaw        Salmagros          20  4069162  106650   \n",
-       "4  UCjpUc0ZOzwHYkFIs3U4Z9fg   Master Cheesey          20     3562     288   \n",
-       "\n",
-       "   comments  duration          published_at keyword  \n",
-       "0      7808  PT38M23S  2025-04-14T20:00:58Z  skyrim  \n",
-       "1       236   PT2H28S  2025-05-03T09:00:38Z  skyrim  \n",
-       "2      3087     PT36S  2025-08-28T17:14:52Z  skyrim  \n",
-       "3      3046      PT7S  2024-09-09T06:02:45Z  skyrim  \n",
-       "4        33  PT11M33S  2025-09-11T16:00:18Z  skyrim  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
