--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8fd1d6f4",
    "metadata": {},
    "outputs": [],
@@ -25,44 +25,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5a9f0d97",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# yt stats\n",
-    "def get_vid_stats(video_id):\n",
+    "# fetch api multiple yt vid stats simultaneously\n",
+    "def get_vid_stats_batch(video_ids):\n",
     "    req = youtube.videos().list(\n",
     "        part=\"statistics\",\n",
-    "        id=video_id\n",
+    "        id=\",\".join(video_ids)\n",
     "    )\n",
-    "    stats_item = stats_req.execute()[\"items\"][0][\"statistics\"]\n",
-    "\n",
-    "    return {\n",
-    "        \"video_id\": video_id,\n",
-    "        \"views\": int(stats_item.get(\"viewCount\", 0)),\n",
-    "        \"likes\": int(stats_item.get(\"likeCount\", 0)),\n",
-    "        \"comments\": int(stats_item.get(\"commentCount\", 0))\n",
-    "    }"
+    "    response = req.execute()\n",
+    "    data = []\n",
+    "    for item in response[\"items\"]:\n",
+    "        stats = item[\"statistics\"]\n",
+    "        data.append({\n",
+    "            data.append({\n",
+    "                \"video_id\": item[\"id\"],\n",
+    "                \"views\": int(stats.get(\"viewCount\", 0)),\n",
+    "                \"likes\": int(stats.get(\"likeCount\", 0)),\n",
+    "                \"comments\": int(stats.get(\"commentCount\", 0))\n",
+    "            })\n",
+    "        })\n",
+    "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "id": "cc36fae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# keyword search yt vid\n",
+    "def search_videos(keyword, start_year, max_results=100):\n",
+    "    video_data = []\n",
+    "    next_page_token = None\n",
+    "    collected = 0\n",
+    "    published_after = f\"{start_year}-01-01T00:00:00Z\"\n",
+    "\n",
+    "    while collected < max_results:\n",
+    "        request = youtube.search().list(\n",
+    "            part=\"id\",\n",
+    "            q=keyword,\n",
+    "            type=\"video\",\n",
+    "            maxResults=min(50, max_results - collected),\n",
+    "            pageToken=next_page_token,\n",
+    "            publishedAfter=published_after\n",
+    "        )\n",
+    "        response = request.execute()\n",
+    "\n",
+    "        video_ids = [item[\"id\"][\"videoId\"] for item in response[\"items\"]] \n",
+    "        batch_data = get_vid_stats_batch(video_ids)\n",
+    "        video_data.extend(batch_data)\n",
+    "\n",
+    "        collected += len(video_ids)\n",
+    "        next_page_token = response.get(\"nextPageToken\")\n",
+    "        if not next_page_token:\n",
+    "            break\n",
+    "\n",
+    "    return pd.DataFrame(video_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "592c8286",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# keyword search\n",
+    "# data stats collection + engagement rate\n",
     "def collect_keyword(keyword, start_year, max_results=100):\n",
-    "    print(f\"Collecting numeric stats for: {keyword}\")\n",
+    "    print(f\"Collecting numeric stats for: {keyword}'...\")\n",
     "    df = search_videos(keyword, start_year=start_year, max_results=max_results)\n",
     "    df[\"keyword\"] = keyword\n",
-    "\n",
-    "    # deriving of metrics\n",
-    "    df[\"engagement_rate\"] = (df[\"likes\"] + df[\"comments\"]) / df[\"views\"].replace(0, 1)\n",
-    "    df[\"views_per_sub\"] = df[\"views\"] / df[\"subscribers\"].replace(0, 1) \n",
-    "\n",
+    "    # feature engineering for quick inspection\n",
+    "    df[\"engagement_rate\"] = (df[\"likes\"] + df[\"comment\"]) / df[\"views\"].replace(0, 1) \n",
     "    return df"
    ]
   },
@@ -73,7 +112,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Main workflow\n",
+    "# Example execution\n",
     "if __name__ == \"__main__\":\n",
     "    # User input\n",
     "    keyword = input(\"Enter keyword: \").strip()\n",
